Snow snackbar when the instrument is changed
It's a little ugly in terms of UX, but the instrument icons may not be 100% clear and this seems like a better solution than having a label that is permanently shown. Considering the user will probably not need to change the instrument more than once per session this should be a minor concession. We could potentially even save the last instrument that was selected as part of the application state and restore it on startup for even better UX and to show the snackbar even less

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Instrument pitch pipe</string>
     <string name="action_info">Info</string>
+    <string name="button_tag_banjo">5-string banjo</string>
+    <string name="button_tag_guitar">Guitar</string>
+    <string name="button_tag_mandolin">Mandolin</string>
+    <string name="button_tag_ukelele">Ukelele</string>
 </resources>
