--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="button_tag_guitar">Guitar</string>
     <string name="button_tag_mandolin">Mandolin</string>
     <string name="button_tag_ukulele">Ukulele</string>
+
+    <string name="dialog_about_content">Source code for this application available here: <a href="https://github.com/bmaupin/android-pitchpipe">https://github.com/bmaupin/android-pitchpipe</a>\n\nInstrument icons are from the <a href="https://thenounproject.com/thepyramidschool/">The Pyramid School</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons CC BY 3.0</a>
+    </string>
 </resources>
