feat: Shorter app name
This is used in the app launcher and shorter seems to be better

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Instrument pitch pipe</string>
+    <string name="app_name">Pitch pipe</string>
     <string name="action_info">Info</string>
 
     <string name="button_tag_banjo">5-string banjo</string>
